--- a/ucs-school-import/debian/control
+++ b/ucs-school-import/debian/control
@@ -28,6 +28,7 @@ Depends: univention-directory-manager,
  univention-join,
  python-univention,
  python-univention-lib,
+ python-lazy-object-proxy,
 Description: UCS@school: Importing objects like users and computers
  This package provides scripts for importing objects like users, groups,
  networks and computers.
