--- a/doc/errata/staging/ucs-school-lib.yaml
+++ b/doc/errata/staging/ucs-school-lib.yaml
@@ -3,7 +3,8 @@ release: "4.3"
 version: [1]
 scope: ucs_4.3-0-ucs-school-4.3
 src: ucs-school-lib
-fix: 11.0.2-1A~4.3.0.201812202240
+fix: 12.0.1-2A~4.4.0.201901091734
 desc: |
  * The UCS@school library has been extended to provide internal functions a faster way to query all users with certain criteria from LDAP (Bug #47885).
-bug: [47885]
+ * An error when filtering in a search for schools was fixed (Bug #48429).
+bug: [47885, 48429]
