Bug #48429: Update advisory

--- a/doc/errata/staging/ucs-school-lib.yaml
+++ b/doc/errata/staging/ucs-school-lib.yaml
@@ -3,8 +3,10 @@ release: "4.4"
 version: [0]
 scope: ucs_4.4-0-ucs-school-4.4
 src: ucs-school-lib
-fix: 12.0.1-0A~4.4.0.201901081302
+fix: 12.0.1-2A~4.4.0.201901091734
 desc: |
  * Solves a problem in the ucsschool lib that returned the wrong shares when fetching all WorkGroupShares (Bug #48428).
  * The UCS@school library has been extended to provide internal functions a faster way to query all users with certain criteria from LDAP (Bug #47885).
-bug: [48428, 47885]
+ * An error when filtering in a search for schools was fixed (Bug #48429).
+
+bug: [48428, 47885, 48429]
