--- a/doc/errata/staging/ucs-school-roleshares.yaml
+++ b/doc/errata/staging/ucs-school-roleshares.yaml
@@ -3,7 +3,7 @@ release: "4.3"
 version: [1]
 scope: ucs_4.3-0-ucs-school-4.3
 src: ucs-school-roleshares
-fix: 
+fix: 6.0.0-2A~4.3.0.201901160908
 desc: |
  * Add support for the new join script API (Bug #47076).
 bug: [47076]
