--- a/doc/errata/staging/ucs-school-roleshares.yaml
+++ b/doc/errata/staging/ucs-school-roleshares.yaml
@@ -1,9 +1,9 @@
 product: ucsschool
-release: "4.3"
-version: [1]
-scope: ucs_4.3-0-ucs-school-4.3
+release: "4.4"
+version: [0]
+scope: ucs_4.4-0-ucs-school-4.4
 src: ucs-school-roleshares
-fix: 
+fix: 7.0.0-1A~4.4.0.201901160913
 desc: |
  * Add support for the new join script API (Bug #47076).
 bug: [47076]
