--- a/doc/errata/staging/ucs-school-umc-users.yaml
+++ b/doc/errata/staging/ucs-school-umc-users.yaml
@@ -5,7 +5,7 @@ scope: ucs_4.3-0-ucs-school-4.3
 src: ucs-school-umc-users
 fix: 14.0.3-1A~4.3.0.201812202240
 desc: |
- * In environments with several hundred users in an OU, opening the UMC module "Passwords (students)" could take an extremely long time,
+ * In environments with several hundred users in one OU, opening the UMC module "Passwords (students)" could take an extremely long time,
    making the module almost unusable. The responsible LDAP search has now been identified and replaced by a more powerful variant in
    order to considerably reduce loading times (Bug #47885).
 bug: [47885]
