--- a/doc/errata/staging/ucs-school-import.yaml
+++ b/doc/errata/staging/ucs-school-import.yaml
@@ -3,11 +3,12 @@ release: "4.4"
 version: [0]
 scope: ucs_4.4-0-ucs-school-4.4
 src: ucs-school-import
-fix: 17.2.0-1A~4.4.0.201901171118
+fix: 17.2.0-2A~4.4.0.201901171723
 desc: |
  * The UCS@school import frameworks ImportUser class has been made more accessable to 3rd party software (Bug #48423).
  * Activate the role feature by default (Bug #48226).
  * Change default of normalization:firstname and normalization:lastname to false (Bug #47351).
  * To be more consistent with other variable names, recordUID and sourceUID have been renamed to record_uid and source_uid (Bug #48478)
  * A users school_classes are now removed, if its entry in the school_classes column is empty (Bug #48045).
-bug: [48423, 48226, 47351, 48478, 48045]
+ * Activate substring search for ucs@school roles (Bug #48246).
+bug: [48423, 48226, 47351, 48478, 48045, 48246]
