--- a/doc/errata/staging/ucs-school-metapackage.yaml
+++ b/doc/errata/staging/ucs-school-metapackage.yaml
@@ -3,7 +3,8 @@ release: "4.4"
 version: [0]
 scope: ucs_4.4-0-ucs-school-4.4
 src: ucs-school-metapackage
-fix: 12.0.0-2A~4.4.0.201901171252
+fix: 12.0.0-3A~4.4.0.201901181251
 desc: |
  * Dummy Entry for samba simplification. Needs to be amended!
-bug: [47957]
+ * Add LDAP indices for ucsschoolRole (Bug #48384).
+bug: [47957, 48384]
