Bug #45538: add advisory

--- a/doc/errata/staging/ucs-school-import.yaml
+++ b/doc/errata/staging/ucs-school-import.yaml
@@ -3,7 +3,7 @@ release: "4.4"
 version: [0]
 scope: ucs_4.4-0-ucs-school-4.4
 src: ucs-school-import
-fix: 17.2.0-3A~4.4.0.201901211027
+fix: 
 desc: |
  * The UCS@school import frameworks ImportUser class has been made more accessable to 3rd party software (Bug #48423).
  * Activate the role feature by default (Bug #48226).
@@ -11,4 +11,5 @@ desc: |
  * To be more consistent with other variable names, recordUID and sourceUID have been renamed to record_uid and source_uid (Bug #48478)
  * A users school_classes are now removed, if its entry in the school_classes column is empty (Bug #48045).
  * Activate substring search for ucs@school roles (Bug #48246).
-bug: [48423, 48226, 47351, 48478, 48045, 48246]
+ * An OID collision in the UCS@school schema has been fixed. This is just a precaution. Problems are not known at this time (Bug #45538).
+bug: [45538, 48423, 48226, 47351, 48478, 48045, 48246]
