--- a/doc/errata/staging/ucs-school-umc-installer.yaml
+++ b/doc/errata/staging/ucs-school-umc-installer.yaml
@@ -5,6 +5,6 @@ scope: ucs_4.4-0-ucs-school-4.4
 src: ucs-school-umc-installer
 fix: 7.0.0-2A~4.4.0.201902191438
 desc: |
- * Fixed that in rare cases the UMC school installer did not install any school packages (Bug #48665).
+ * Fixed the UMC school installer in rare cases not installing any school packages (Bug #48665).
  * Deactivate the acess of schoolinstaller/ umcp commands for root in postinst script (Bug #48681).
 bug: [48665, 48681]
