--- a/doc/errata/staging/ucs-school-umc-installer.yaml
+++ b/doc/errata/staging/ucs-school-umc-installer.yaml
@@ -3,8 +3,8 @@ release: "4.4"
 version: [0]
 scope: ucs_4.4-0-ucs-school-4.4
 src: ucs-school-umc-installer
-fix: 7.0.0-2A~4.4.0.201902191438
+fix: 7.0.0-3A~4.4.0.201902200837
 desc: |
  * Fixed the UMC school installer in rare cases not installing any school packages (Bug #48665).
- * Deactivate the acess of schoolinstaller/ umcp commands for root in postinst script (Bug #48681).
+ * Remove an unnecessary postinst script (Bug #48681).
 bug: [48665, 48681]
