Bug #48731: update advisory

--- a/doc/errata/staging/ucs-school-umc-exam.yaml
+++ b/doc/errata/staging/ucs-school-umc-exam.yaml
@@ -6,4 +6,5 @@ src: ucs-school-umc-exam
 fix: 9.0.0-1A~4.4.0.201901290952
 desc: |
  * Creating an exam with a whitespace at the beginning or end of the name created a traceback upon starting the exam. Whitespaces are now trimmed (Bug #48509).
-bug: [48509]
+ * The postinst scripts now use <command>call_joinscript</command> instead of calling join scripts directly (Bug #48731).
+bug: [48509, 48731]
