--- a/doc/errata/staging/ucs-school-ldap-acls-master.yaml
+++ b/doc/errata/staging/ucs-school-ldap-acls-master.yaml
@@ -3,7 +3,7 @@ release: "4.4"
 version: [0]
 scope: ucs_4.4-0-ucs-school-4.4
 src: ucs-school-ldap-acls-master
-fix: 
+fix: 17.0.0-1A~4.4.0.201902240135
 desc: |
  * The postinst scripts now use call_joinscript instead of calling join scripts directly (Bug #48731).
 bug: [48731]
