--- a/doc/errata/staging/ucs-school-lib.yaml
+++ b/doc/errata/staging/ucs-school-lib.yaml
@@ -3,7 +3,7 @@ release: "4.4"
 version: [0]
 scope: ucs_4.4-0-ucs-school-4.4
 src: ucs-school-lib
-fix: 12.1.0-11A~4.4.0.201902221427
+fix: 12.1.0-12A~4.4.0.201902251228
 desc: |
  * Solves a problem in the ucsschool lib that returned the wrong shares when fetching all WorkGroupShares (Bug #48428).
  * The UCS@school library has been extended to provide internal functions a faster way to query all users with certain criteria from LDAP (Bug #47885).
@@ -11,4 +11,5 @@ desc: |
  * Activate the role feature by default (Bug #48226, Bug #48226, Bug #48647, Bug #48741).
  * A users school_classes are now removed, if the school_classes attribute is empty (Bug #48045).
  * Additional validation has been added for computer objects (Bug #48099).
-bug: [48428, 47885, 48429, 48226, 48045, 48226, 48647, 48099, 48741]
+ * Fix creation of Domain Users $OU if <envar>ucsschool/import/attach/policy/default-umc-users=no</envar> (Bug #48722)
+bug: [48428, 47885, 48429, 48226, 48045, 48226, 48647, 48099, 48741, 48722]
