--- a/doc/errata/staging/ucs-school-lib.yaml
+++ b/doc/errata/staging/ucs-school-lib.yaml
@@ -3,7 +3,8 @@ release: "4.3"
 version: [1]
 scope: ucs_4.3-0-ucs-school-4.3
 src: ucs-school-lib
-fix: 11.0.2-4A~4.3.0.201902180830
+fix: 11.0.2-5A~4.3.0.201902251246
 desc: |
  * The computer objects validation was extended to warn of new network creation or network overlaps (Bug #48099).
-bug: [48099]
+ * Fix the creation of Domain Users $OU if <envar>ucsschool/import/attach/policy/default-umc-users=no</envar> (Bug #48722).
+bug: [48099, 48722]
