--- a/doc/errata/staging/ucs-school-metapackage.yaml
+++ b/doc/errata/staging/ucs-school-metapackage.yaml
@@ -3,7 +3,7 @@ release: "4.4"
 version: [0]
 scope: ucs_4.4-0-ucs-school-4.4
 src: ucs-school-metapackage
-fix: 12.0.0-36A~4.4.0.201902251151
+fix: 12.0.0-37A~4.4.0.201902251422
 desc: |
  * Dummy Entry for samba simplification. Needs to be amended!
  * Add LDAP indices for ucsschoolRole (Bug #48384).
@@ -11,4 +11,5 @@ desc: |
  * Adds the reworked logo (Bug #48699).
  * The postinst scripts now use <command>call_joinscript</command> instead of calling join scripts directly (Bug #48731).
  * Add the new UCS@school logo (Bug #48699).
-bug: [47957, 48384, 48540, 48699, 48731, 48699]
+ * The meta packages have been adapted to handle the simplified installation (Bug #47969).
+bug: [47957, 48384, 48540, 48699, 48731, 48699, 47969]
