Bug #48790: recommend http-api-import +-ui on dc master

--- a/doc/errata/staging/ucs-school-metapackage.yaml
+++ b/doc/errata/staging/ucs-school-metapackage.yaml
@@ -12,4 +12,5 @@ desc: |
  * The postinst scripts now use <command>call_joinscript</command> instead of calling join scripts directly (Bug #48731).
  * Add the new UCS@school logo (Bug #48699).
  * The meta packages have been adapted to handle the simplified installation (Bug #47969).
-bug: [47957, 48384, 48540, 48699, 48731, 48699, 47969]
+ * The meta packages for DC master now recommend the installation of the HTTP-API import backend and frontend (Bug #48790).
+bug: [47957, 48384, 48540, 48699, 48731, 48699, 47969, 48790]
