--- a/doc/errata/staging/ucs-school-import.yaml
+++ b/doc/errata/staging/ucs-school-import.yaml
@@ -3,9 +3,10 @@ release: "4.3"
 version: [1]
 scope: ucs_4.3-0-ucs-school-4.3
 src: ucs-school-import
-fix: 16.0.3-3A~4.3.0.201902251248
+fix: 
 desc: |
  * The UCS@school import frameworks ImportUser class has been made more accessable to 3rd party software (Bug #48423).
  * The UCS@school import is now forward compatible to the renaming of record_uid and source_uid in UCS@school 4.4v1 (Bug #48478).
  * Specify the description of <envar>ucsschool/import/attach/policy/default-umc-users</envar> (Bug #48722).
-bug: [48423, 48478, 48722]
+ * The ucsschoolRole migration script was fixed to not use lower case OU names on DC computer objects (Bug #48792).
+bug: [48423, 48478, 48722, 48792]
