Bug #48734: fix broken pipe

--- a/doc/errata/staging/ucs-school-metapackage.yaml
+++ b/doc/errata/staging/ucs-school-metapackage.yaml
@@ -14,4 +14,5 @@ desc: |
  * The meta packages have been adapted to handle the simplified installation (Bug #47969).
  * The meta packages for DC master now recommend the installation of the HTTP-API import backend and frontend (Bug #48790).
  * Set ucsschoolRole property for domain controllers during join (Bug #48519).
-bug: [47957, 48384, 48540, 48699, 48731, 48699, 47969, 48790, 48519]
+ * Add missing image and fix broekn pipe (Bug #48734).
+bug: [47957, 48384, 48540, 48699, 48731, 48699, 47969, 48790, 48519, 48734]
