--- a/doc/errata/staging/ucs-school-lib.yaml
+++ b/doc/errata/staging/ucs-school-lib.yaml
@@ -13,4 +13,5 @@ desc: |
  * Additional validation has been added for computer objects (Bug #48099).
  * Fix creation of Domain Users $OU if <envar>ucsschool/import/attach/policy/default-umc-users=no</envar> (Bug #48722)
  * Remove handling of role for secondary school slave (Bug #48732).
-bug: [48428, 47885, 48429, 48226, 48045, 48226, 48647, 48099, 48741, 48722, 48732]
+ * A users ucsschool_role attribute is now updated, when changing the school (Bug #48649).
+bug: [48428, 47885, 48429, 48226, 48045, 48226, 48647, 48099, 48741, 48722, 48732, 48649]
