--- a/doc/errata/staging/ucs-school-lib.yaml
+++ b/doc/errata/staging/ucs-school-lib.yaml
@@ -7,4 +7,5 @@ fix: 11.0.2-5A~4.3.0.201902251246
 desc: |
  * The computer objects validation was extended to warn of new network creation or network overlaps (Bug #48099).
  * Fix the creation of Domain Users $OU if <envar>ucsschool/import/attach/policy/default-umc-users=no</envar> (Bug #48722).
-bug: [48099, 48722]
+ * * An internal filter error while searching for schools was fixed (Bug #48429).
+bug: [48099, 48722, 48429]
