--- a/doc/changelog/Makefile
+++ b/doc/changelog/Makefile
@@ -1,5 +1,5 @@
 #!/usr/bin/make -f
-MAIN := changelog-ucsschool-4.4v1-de
+MAIN := release-notes-ucsschool-4.4v1-de
 STYLESHEET := univention_extdocs
 OPTIONS += --stringparam ulink.show 0
 
