--- a/doc/errata/staging/ucs-school-import.yaml
+++ b/doc/errata/staging/ucs-school-import.yaml
@@ -5,9 +5,9 @@ scope: ucs_4.3-0-ucs-school-4.3
 src: ucs-school-import
 fix: 16.0.3-4A~4.3.0.201902261750
 desc: |
- * The UCS@school import frameworks ImportUser class has been made more accessable to 3rd party software (Bug #48423).
- * The UCS@school import is now forward compatible to the renaming of record_uid and source_uid in UCS@school 4.4v1 (Bug #48478).
- * Specify the description of <envar>ucsschool/import/attach/policy/default-umc-users</envar> (Bug #48722).
- * The ucsschoolRole migration script was fixed to not use lower case OU names on DC computer objects (Bug #48792).
- * An OID collision in the UCS@school schema has been fixed. This is just a precaution. Problems are not known at this time (Bug #45538).
+ * The UCS@school import framework's <literal>ImportUser</literal> class has been made more accessible to 3rd party software (Bug #48423).
+ * The UCS@school import is now forward compatible to the renaming of <literal>record_uid</literal> and <literal>source_uid</literal> in UCS@school 4.4v1 (Bug #48478).
+ * The description of the UCR variable <envar>ucsschool/import/attach/policy/default-umc-users</envar> has been clarified (Bug #48722).
+ * The <literal>ucsschoolRole</literal> migration script was fixed to not use lower case OU names on DC computer objects (Bug #48792).
+ * An OID collision in the UCS@school LDAP schema has been fixed. This is just a precaution. Problems are not known at this time (Bug #45538).
 bug: [48423, 48478, 48722, 48792, 45538]
