--- a/doc/errata/staging/ucs-school-import.yaml
+++ b/doc/errata/staging/ucs-school-import.yaml
@@ -5,8 +5,9 @@ scope: ucs_4.4-0-ucs-school-4.4
 src: ucs-school-import
 fix: 17.0.5-6A~4.4.0.201903181111
 desc: |
+ * The script <filename>/usr/share/ucs-school-import/scripts/reset_username_counter</filename> was added. It can be used to reset unique username and email counters (Bug #42131).
  * A configuration key "csv:allowed_missing_columns" was added. It can be assigned a list of column names that are allowed to be missing in the input data (Bug #48655).
  * Internal improvement: the PyHook loading code was consolidated (Bug #48958).
  * Before reading the input data, <literal>pre-read</literal> hooks are now executed (Bug #48188).
  * A <literal>pre-read</literal> hook was added, that can rename the columns of a CSV file before it is read. To activate it, copy <filename>/usr/share/ucs-school-import/pyhooks-available/pre_read_modify_csv_header.py</filename> to <filename class="directory">/usr/share/ucs-school-import/pyhooks</filename> (Bug #48189).
-bug: [48655, 48958, 48188, 48189]
+bug: [42131, 48655, 48958, 48188, 48189]
