Bug #49037: provide handlers separately from loggers, colorize console output

--- a/ucs-school-lib/debian/control
+++ b/ucs-school-lib/debian/control
@@ -16,7 +16,8 @@ Depends: ${misc:Depends},
  python-six,
  univention-management-console,
  python-univention-directory-manager,
- python-univention-lib
+ python-univention-lib,
+ python-colorlog,
 Provides: ${python:Provides}
 Description: UCS@school - common Python modules
  This package contains Python modules used by various
