Bug #49037: move constants to config file

--- a/ucs-school-lib/debian/control
+++ b/ucs-school-lib/debian/control
@@ -18,6 +18,7 @@ Depends: ${misc:Depends},
  python-univention-directory-manager,
  python-univention-lib,
  python-colorlog,
+ python-ruamel.yaml,
 Provides: ${python:Provides}
 Description: UCS@school - common Python modules
  This package contains Python modules used by various
