Bug #49050, Bug #49048, Bug #49049: fix advisories

--- a/doc/errata/staging/ucs-school-umc-exam.yaml
+++ b/doc/errata/staging/ucs-school-umc-exam.yaml
@@ -7,4 +7,4 @@ fix: 9.0.0-4A~4.4.0.201903141619
 desc: |
  * Internal improvement: use the consolidated PyHook loading code (Bug #48958).
  * Preparations for better browser cache-control have been implemented. (Bug #48995)
-bug: [48655, 48958, 48995]
+bug: [48958, 48995]
