--- a/doc/errata/staging/ucs-school-lib.yaml
+++ b/doc/errata/staging/ucs-school-lib.yaml
@@ -3,7 +3,8 @@ release: "4.4"
 version: [0]
 scope: ucs_4.4-0-ucs-school-4.4
 src: ucs-school-lib
-fix: 12.1.0-14A~4.4.0.201903131643
+fix: 12.1.0-15A~4.4.0.201903212128
 desc: |
- * Internal improvement: improved type hints and Python 3 compatibility (Bug #48958).
-bug: [48958]
+ * Internal improvement: better type hints and Python 3 compatibility (Bug #48958).
+ * Internal improvement: better logging configuration (Bug #49037).
+bug: [48958, 49037]
