--- a/ucs-test-ucsschool/debian/control
+++ b/ucs-test-ucsschool/debian/control
@@ -13,6 +13,7 @@ Depends: ucs-test-libs,
  ucs-test-framework,
  python-pycurl,
  python-pytest,
+ python-attr,
  eapol,
  ${misc:Depends}
 Provides: ucs-test-module
