--- a/doc/errata/staging/python-pampy.yaml
+++ b/doc/errata/staging/python-pampy.yaml
@@ -5,5 +5,5 @@ scope: ucs_4.3-0-ucs-school-4.3
 src: python-pampy
 fix: 1.8.4-1A~4.3.0.201903160731
 desc: |
- * The python-pampy package now handles Unicode strings.
+ * The python-pampy package now handles Unicode strings correctly (Bug #48137).
 bug: [48137]
