--- a/doc/errata/staging/ucs-school-import.yaml
+++ b/doc/errata/staging/ucs-school-import.yaml
@@ -5,7 +5,7 @@ scope: ucs_4.3-0-ucs-school-4.3
 src: ucs-school-import
 fix: 16.0.3-6A~4.3.0.201903131712
 desc: |
- * A configuration key "csv:allowed_missing_columns" was added. It can be assigned a list of column names that are allowed to be missing in the input data (Bug #48655).
+ * A configuration key <literal>csv:allowed_missing_columns</literal> was added. It can be assigned a list of column names that are allowed to be missing in the input data (Bug #48655).
  * A hook was added that runs before reading the input data (Bug #48188).
  * An example pre-read hook was added, that can change the column names in a CSV file (Bug #48189).
 bug: [48655, 48188, 48189]
