Bug #49051: update advisory

--- a/doc/errata/staging/python-pampy.yaml
+++ b/doc/errata/staging/python-pampy.yaml
@@ -5,5 +5,5 @@ scope: ucs_4.4-0-ucs-school-4.4
 src: python-pampy
 fix: 1.8.4-1A~4.3.0.201903160731
 desc: |
- * The python-pampy package now handles Unicode strings.
+ * The python-pampy package now handles Unicode strings (Bug #49051).
 bug: [49051]
