--- a/doc/errata/staging/ucs-school-lib.yaml
+++ b/doc/errata/staging/ucs-school-lib.yaml
@@ -3,7 +3,7 @@ release: "4.3"
 version: [1]
 scope: ucs_4.3-0-ucs-school-4.3
 src: ucs-school-lib
-fix:
+fix: 11.0.2-6A~4.3.0.201904091600
 desc: |
  * Internal improvement: improved type hints and Python 3 compatibility (Bug #49268).
 bug: [49268]
