--- a/doc/errata/staging/ucs-school-umc-exam.yaml
+++ b/doc/errata/staging/ucs-school-umc-exam.yaml
@@ -3,7 +3,7 @@ release: "4.3"
 version: [1]
 scope: ucs_4.3-0-ucs-school-4.3
 src: ucs-school-umc-exam
-fix: 
+fix: 8.0.2-4A~4.3.0.201904091604
 desc: |
  * Internal improvement: use the consolidated PyHook loading code (Bug #49268).
 bug: [49268]
