--- a/doc/errata/staging/ucs-school-lib.yaml
+++ b/doc/errata/staging/ucs-school-lib.yaml
@@ -3,7 +3,7 @@ release: "4.4"
 version: [0]
 scope: ucs_4.4-0-ucs-school-4.4
 src:  ucs-school-lib
-fix: 
+fix: 12.1.1-3A~4.4.0.201904171634
 desc: |
  * Fixed a bug which prevented domain lists in internetrules to be changed. (Bug #49312).
 bug: [49312]
