--- a/doc/errata/staging/ucs-school-umc-exam.yaml
+++ b/doc/errata/staging/ucs-school-umc-exam.yaml
@@ -3,7 +3,7 @@ release: "4.4"
 version: [0]
 scope: ucs_4.4-0-ucs-school-4.4
 src: ucs-school-umc-exam
-fix: 9.0.0-5A~4.4.0.201904121600
+fix: 9.0.0-6A~4.4.0.201904231051
 desc: |
- * The students result files of a running exam can now be automatically collected. The default is to collect them every <literal>5</literal> minutes. The interval can be configured using the UCR variable <envar>ucsschool/exam/cron/backup</envar>. The feature can be switched off by setting <envar>ucsschool/exam/cron/backup/activated</envar> to <literal>false</literal>. (Bug #49227).
+ * The students result files of a running exam can now be automatically collected. The default is to collect them every <literal>5</literal> minutes. The interval can be configured using the UCR variable <envar>ucsschool/exam/cron/backup</envar>. The feature can be switched on by setting <envar>ucsschool/exam/cron/backup/activated</envar> to <literal>true</literal>. (Bug #49227).
 bug: [49227]
