--- a/doc/errata/staging/ucs-school-import.yaml
+++ b/doc/errata/staging/ucs-school-import.yaml
@@ -7,4 +7,5 @@ fix: 17.0.6-10A~4.4.0.201905031046
 desc: |
  * Improved lookup performance of the shipped syntax classes that slowed down the opening of user objects considerably when a lot of schools exist. (Bug #49329).
  * Duplicate hook execution code was removed (Bug #48141).
-bug: [49329, 48141]
+ * Usernames are now allowed to be longer than <literal>20</literal> characters. <emphasis>Important:</emphasis> If Window clients older than <literal>8.1</literal> are in use, the maximum username lenght must not exceed <literal>20</literal>, or logging into them will not be possible! (Bug #47222).
+bug: [49329, 48141, 47222]
